# vitejs-vite-2raw6knb

./: create_project.sh  package-lock.json
AdvancedMediaPlayer/: README.md  build.gradle  gradle.properties  settings.gradle
AdvancedMediaPlayer/app/: build.gradle
AdvancedMediaPlayer/app/src/main/cpp/: CMakeLists.txt  diggz_config.cpp  diggz_config.h  main_wrapper.cpp
AdvancedMediaPlayer/app/src/main/java/com/mediaplayer/advanced/: MainActivity.java  NativeEngine.java
AdvancedMediaPlayer/scripts/: build.sh  download_dependencies.sh  install.sh  setup_complete.sh
